--- a/source/Makefile
+++ b/source/Makefile
@@ -7,7 +7,7 @@ tokens.cpp:
 	lex -o tokens.cpp tokens.l
 
 parser.cpp:
-	bison -d -o parser.cpp parser.y
+	bison --debug --verbose -d -o parser.cpp parser.y
 
 main: tokens.cpp parser.cpp
 	g++ main.cpp -o parser parser.cpp tokens.cpp Context.cpp CodeGeneration/*.cpp --std=c++11 -Wno-deprecated-register -Wno-reorder -Wno-unused-function
